[metadata]
name = topo_creator
version = 0.0.1
author = xurui
author_email = xurui@fiberhome.com
description = 团队内部工具包
long_description = file: README.md
long_description_content_type = text/markdown
url = .
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    openpyxl
    geopandas~=1.1.1
    shapely~=2.1.2

[options.package_data]
* = *.json, *.txt